# botctl

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
botctl/bot/types/: CMakeLists.txt  animation.cpp  animation.h  audio.cpp  audio.h  base_file.cpp  base_file.h  base_object.cpp  base_object.h  bot_command.cpp  bot_command.h  bot_command_scope.cpp  bot_command_scope.h  bot_command_scope_all_chat_administrators.h  bot_command_scope_chat.cpp  bot_command_scope_chat.h  bot_command_scope_chat_administrators.cpp  bot_command_scope_chat_administrators.h  bot_command_scope_default.cpp  bot_command_scope_default.h  callbackquery.cpp  chat.cpp  chat.h  chat_administrator_rights.cpp  chat_invite_link.cpp  chat_invite_link.h  chat_join_request.cpp  chat_location.cpp  chat_location.h  chat_member.cpp  chat_member.h  chat_member_administrator.cpp  chat_member_administrator.h  chat_member_banned.cpp  chat_member_banned.h  chat_member_left.cpp  chat_member_member.cpp  chat_member_member.h  chat_member_owner.cpp  chat_member_restricted.cpp  (+71 more)
botctl/bot/types/include/: animation.h  audio.h  base_file.h  base_object.h  bot_command_scope_all_private_chats.h  bot_command_scope_chat.h  bot_command_scope_chat_member.h  callbackquery.h  chat.h  chat_administrator_rights.h  chat_join_request.h  chat_member_left.h  chat_member_owner.h  chat_member_updated.h  chat_photo.h  contact.h  document.h  fields.h  file.h  force_reply.h  keyboard_button.h  location.h  login_url.h  menu_button.h  message.h  message_auto_delete_timer_changed.h  message_entity.h  photo_size.h  poll_answer.h  poll_options.h  proximity_alert_triggered.h  reply_keyboard_remove.h  response_parameters.h  user.h  venue.h  video.h  video_note.h  voice.h  voice_chat_ended.h  voice_chat_participants_invited.h  (+2 more)
botctl/bot/types/src/: audio.cpp  bot_command.cpp  bot_command_scope.cpp  bot_command_scope_all_chat_administrators.cpp  bot_command_scope_all_private_chats.cpp  bot_command_scope_chat_member.cpp  chat.cpp  chat_administrator_rights.cpp  chat_invite_link.cpp  chat_join_request.cpp  chat_location.cpp  chat_member.cpp  chat_member_administrator.cpp  chat_member_banned.cpp  chat_member_left.cpp  chat_member_member.cpp  chat_member_owner.cpp  chat_member_restricted.cpp  chat_member_updated.cpp  chat_permissions.cpp  chat_photo.cpp  constants.cpp  contact.cpp  dice.cpp  document.cpp  fields.cpp  file.cpp  inline_keyboard_button.cpp  keyboard_button.cpp  keyboard_button_poll_type.cpp  location.cpp  login_url.cpp  menu_button.cpp  menu_button_commands.cpp  menu_button_default.cpp  menu_button_web_app.cpp  message.cpp  message_auto_delete_timer_changed.cpp  message_entity.cpp  poll.cpp  (+14 more)
botctl/bot/types/types-test/: CMakeLists.txt  animation_test.cpp  audio_type_test.cpp  base_file_test.cpp  base_type_test.cpp  bot_command_scope_all_private_chats_test.cpp  bot_command_scope_chat_administrators_test.cpp  bot_command_scope_chat_member_test.cpp  bot_command_scope_default_test.cpp  bot_command_scope_test.cpp  bot_command_test.cpp  callbackquery_test.cpp  chat_administrator_rights_test.cpp  chat_invite_link_test.cpp  chat_join_request_test.cpp  chat_location_test.cpp  chat_member_administrator_test.cpp  chat_member_banned_test.cpp  chat_member_left_test.cpp  chat_member_member_test.cpp  chat_member_owner_test.cpp  chat_member_restricted_test.cpp  chat_member_test.cpp  chat_member_updated_test.cpp  chat_permissions_test.cpp  chat_photo_test.cpp  chat_type_test.cpp  contact_type_test.cpp  dice_type_test.cpp  document_type_test.cpp  file_type_test.cpp  force_reply_test.cpp  keyboard_button_poll_type_test.cpp  keyboard_button_type_test.cpp  location_type_test.cpp  login_url_type_test.cpp  menu_button_test.cpp  message_auto_delete_timer_changed.cpp  message_entity_type_test.cpp  message_id_type_test.cpp  (+18 more)
botctl/bot/types/types-test/src/: animation_test.cpp  audio_type_test.cpp  base_file_test.cpp  base_type_test.cpp  bot_command_scope_all_private_chats_test.cpp  bot_command_scope_chat_administrators_test.cpp  bot_command_scope_chat_member_test.cpp  bot_command_scope_default_test.cpp  bot_command_scope_test.cpp  bot_command_test.cpp  callbackquery_test.cpp  chat_administrator_rights_test.cpp  chat_invite_link_test.cpp  chat_join_request_test.cpp  chat_location_test.cpp  chat_member_administrator_test.cpp  chat_member_banned_test.cpp  chat_member_left_test.cpp  chat_member_member_test.cpp  chat_member_owner_test.cpp  chat_member_restricted_test.cpp  chat_member_test.cpp  chat_member_updated_test.cpp  chat_permissions_test.cpp  chat_photo_test.cpp  chat_type_test.cpp  contact_type_test.cpp  dice_type_test.cpp  document_type_test.cpp  file_type_test.cpp  force_reply_test.cpp  keyboard_button_poll_type_test.cpp  keyboard_button_type_test.cpp  location_type_test.cpp  login_url_type_test.cpp  menu_button_test.cpp  message_auto_delete_timer_changed.cpp  message_entity_type_test.cpp  message_id_type_test.cpp  message_type_test.cpp  (+17 more)
